--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  <link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
 <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 	<meta charset="UTF-8">
-	<title>Lorna</title>
+	<title>Lorna Stevens</title>
 </head>
 </html>
 
