--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 				<a href="https://github.com/lorstevens"> <img src="./assets/images/github.png" id="logos"></a>
 
-				<a href="https://july2017pt.slack.com/messages/C6ATC4CLC/"> <img src="./assets/images/stack.png" id="logos"></a>
+				<a href="https://stackoverflow.com/users/8197246/"> <img src="./assets/images/stack.png" id="logos"></a>
 
 		</div>
 
